crates/biome_cli/tests/snapshots/main_cases_json_parsing/check_json_parse_allow_comments_true.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --json-parse-allow-comments=true file.json
```

## `file.json`

```json
{
  // This is a comment
  "key": "value"
}
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.json format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1 1 │   {
    2   │ - ··//·This·is·a·comment
    3   │ - ··"key":·"value"
    4   │ - }
      2 │ + → //·This·is·a·comment
      3 │ + → "key":·"value"
      4 │ + }
      5 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
