crates/biome_cli/tests/snapshots/main_cases_json_parsing/check_json_parse_respects_config_allow_comments.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check file.json
```

## `biome.json`

```json
{
  "json": {
    "parser": {
      "allowComments": true
    }
  }
}
```

## `file.json`

```json
{
  // Comment
  "key": "value"
}
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.json format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1 1 │   {
    2   │ - ··//·Comment
    3   │ - ··"key":·"value"
    4   │ - }
      2 │ + → //·Comment
      3 │ + → "key":·"value"
      4 │ + }
      5 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
