crates/biome_cli/tests/snapshots/main_cases_json_parsing/check_json_parse_respects_config_allow_trailing_commas.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check file.json
```

## `biome.json`

```json
{
  "json": {
    "parser": {
      "allowTrailingCommas": true
    }
  }
}
```

## `file.json`

```json
{
  "key": "value",
}
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.json format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1 1 │   {
    2   │ - ··"key":·"value",
    3   │ - }
      2 │ + → "key":·"value"
      3 │ + }
      4 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
