crates/biome_cli/tests/snapshots/main_cases_json_parsing/lint_json_parse_allow_comments_true.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --json-parse-allow-comments=true file.json
```

## `file.json`

```json
{
  // This is a comment
  "key": "value"
}
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
